--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
     "reactstrap": "8.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "sweetalert2": "^8.18.6"
   },
   "devDependencies": {
     "typescript": "3.3.3"
